--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
   <body>
     <h1>Sumador</h1>
     <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
+      <label for="primer-numero">Ingrese la frase: </label>
+      <input type="number" id="texto" />
       <input type="submit" value="Sumar" id="sumar-button" />
     </form>
     <div id="resultado-div"></div>
