prueba cypress funcionando

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
+    <h1>Contador de palabras</h1>
+    <form id="contar-form">
       <label for="primer-numero">Ingrese la frase: </label>
-      <input type="number" id="texto" />
-      <input type="submit" value="Sumar" id="sumar-button" />
+      <input type="text" id="texto" />
+      <input type="submit" value="Sumar" id="contar-button" />
     </form>
     <div id="resultado-div"></div>
 
